objects/Contract_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Product_Catalog_Id__c</fullName>
        <formula>Product__r.Partner_Product_Catalog__c</formula>
        <label>Partner Product Catalog Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Product_External_Id__c</fullName>
        <formula>Product__r.Partner_Product_Catalog__r.CHANNEL_ORDERS__Product_ID__c</formula>
        <label>Partner Product External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Contract Line Item Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>